--- a/Tests/fixtures/smartphone-26.yml
+++ b/Tests/fixtures/smartphone-26.yml
@@ -3504,3 +3504,249 @@
     model: Pixel 3
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; A33w) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.99 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 80.0.3987.99
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: OPPO
+    model: Neo 7
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 2.3.7; SO-02D Build/6.1.A.2.55) AppleWebKit/535.19 (KHTML, like Gecko) Chrome/18.0.1025.166 Mobile Safari/535.19
+  os:
+    name: Android
+    version: 2.3.7
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 18.0.1025.166
+    engine: WebKit
+    engine_version: "535.19"
+  device:
+    type: smartphone
+    brand: Sony
+    model: Xperia NX
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; Y19(EU) Build/NRD90M) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.87 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 67.0.3396.87
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Xgody
+    model: Y19
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Xiaomi_2015052_TD-LTE/V1 Linux/3.10.61 Android/5.0 Release/7.7.2015 Browser/AppleWebKit537.36 Mobile Safari/537.36 System/Android 5.0 XiaoMi/MiuiBrowser/2.4.9
+  os:
+    name: Android
+    version: "5.0"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    version: 2.4.9
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: phablet
+    brand: Xiaomi
+    model: Redmi Note 2
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 2.3.5; en-US; AMOI_N89 Build/GRJ90) AppleWebKit/534.31 (KHTML, like Gecko) UCBrowser/9.0.2.299 U3/0.8.0 Mobile Safari/534.31
+  os:
+    name: Android
+    version: 2.3.5
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 9.0.2.299
+    engine: WebKit
+    engine_version: "534.31"
+  device:
+    type: smartphone
+    brand: Amoi
+    model: N89
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; CHEETAH) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.101 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 91.0.4472.101
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: CUBOT
+    model: Cheetah
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; Harrier from EE Build/LMY47V) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.98 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 61.0.3163.98
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: EE
+    model: Harrier
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; Z2_PRO) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.90 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 73.0.3683.90
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: UMIDIGI
+    model: Z2 Pro
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.2.2; ru-ru; GINZZU RS7D Build/JDQ39) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30
+  os:
+    name: Android
+    version: 4.2.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: smartphone
+    brand: Ginzzu
+    model: RS7D
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.2.2; ru-ru; GINZZU RS91D Build/JDQ39) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30
+  os:
+    name: Android
+    version: 4.2.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: smartphone
+    brand: Ginzzu
+    model: RS91D
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.2.2; ru-ru; Ginzzu R8 Dual Build/JDQ39) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30 Instagram 54.0.0.14.82 Android (17/4.2.2; 160dpi; 320x480; Kingbrand/Ginzzu R8 Dual; Ginzzu R8 Dual; Ginzzu R8 Dual; mt6572; ru_RU; 117539687)
+  os:
+    name: Android
+    version: 4.2.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 54.0.0.14.82
+  device:
+    type: smartphone
+    brand: Ginzzu
+    model: R8 Dual
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.2.1; ru-ru; Qumo Quest 574 Build/JOP40D) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30 Instagram 54.0.0.14.82 Android (17/4.2.1; 320dpi; 720x1280; alps; Qumo Quest 574; 01v21_v89_cxq_russia; mt6589; ru_RU; 117539698)
+  os:
+    name: Android
+    version: 4.2.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 54.0.0.14.82
+  device:
+    type: smartphone
+    brand: Qumo
+    model: Quest 574
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.1.1; ru-ru; Qumo Quest 530 Build/JRO03C) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30 Instagram 54.0.0.14.82 Android (16/4.1.1; 240dpi; 540x960; alps; Qumo Quest 530; e1901_v77_gq2002_qumo; mt6577; ru_RU; 117539695)
+  os:
+    name: Android
+    version: 4.1.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 54.0.0.14.82
+  device:
+    type: smartphone
+    brand: Qumo
+    model: Quest 530
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; Z250) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.157 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 74.0.3729.157
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: DEXP
+    model: Z250
+  os_family: Android
+  browser_family: Chrome
