--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5304,7 +5304,7 @@ EE:
   models:
     - regex: 'Rook[_ ]from[_ ]EE'
       model: 'Rock'
-    - regex: '([a-z])[_ ]from[_ ]EE'
+    - regex: '(Harrier|Hawk)[_ ]from[_ ]EE'
       model: '$1'
 
 # EKT
